<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Space Adventure</string>
    <string name="score_game_text"> %d</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="game_over">Game Over</string>
    <string name="game_over_score">Your Score\n\n%d</string>
    <string name="play">Play</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="setting">setting</string>
    <string name="shop">shop</string>
    <string name="next">next</string>

</resources>
