<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start_screen"
    tools:context=".ui.menu.GameOverFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_weight="0.5">

        <Button
            android:id="@+id/next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30sp"
            android:background="@drawable/golden_button"
            android:fontFamily="@font/exo_black"
            android:gravity="center"
            android:text="@string/play"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/ic_background_color"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/setting_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30sp"
            android:background="@drawable/golden_button"
            android:fontFamily="@font/exo_black"
            android:gravity="center"
            android:text="@string/setting"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/ic_background_color"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/shop_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/next_btn" />

        <Button
            android:id="@+id/shop_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30sp"
            android:background="@drawable/golden_button"
            android:fontFamily="@font/exo_black"
            android:gravity="center"
            android:text="@string/shop"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/ic_background_color"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>